fixed transpose slider of pitchshift

--- a/css/saw.css
+++ b/css/saw.css
@@ -40,4 +40,5 @@ h3 {
 
 .data-block {
   display: inline-block;
+  width: 150px;
 }
